[package]
name = "ethereum_abi"
version = "0.3.0"
authors = ["Felipe Rosa <felipe.sgrosa@gmail.com>"]
edition = "2018"
description = "Ethereum Smart Contract ABI parsing library"
documentation = "https://docs.rs/ethereum_abi"
readme = "README.md"
repository = "https://github.com/FelipeRosa/rust-ethereum-abi"
license = "MIT"
keywords = ["abi", "ethereum", "solidity", "web3"]

[dependencies]
anyhow = "1.0.37"
ethereum-types = "0.12.0"
hex = "0.4.2"
nom = "6.0.1"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.8.1"