[package]
name = "ethereum_abi"
version = "0.3.0"
authors = ["Felipe Rosa <felipe.sgrosa@gmail.com>"]
edition = "2018"
description = "Ethereum Smart Contract ABI parsing library"
documentation = "https://docs.rs/ethereum_abi"
readme = "README.md"
repository = "https://github.com/FelipeRosa/rust-ethereum-abi"
license = "MIT"
keywords = ["abi", "ethereum", "solidity", "web3"]

[dependencies]
anyhow = "1.0"
ethereum-types = "0.13"
hex = "0.4"
nom = "7.0"
regex = "1.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
