[package]
name = "ethereum_abi"
version = "0.4.0"
authors = ["Felipe Rosa <felipe.sgrosa@gmail.com>"]
edition = "2018"
description = "Ethereum Smart Contract ABI parsing library"
documentation = "https://docs.rs/ethereum_abi"
readme = "README.md"
repository = "https://github.com/FelipeRosa/rust-ethereum-abi"
license = "MIT"
keywords = ["abi", "ethereum", "solidity", "web3"]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
ethereum-types = { version = "0.14.0", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
nom = { version = "7.0", default-features = false, features = ["std"] }
regex = { version = "1.5", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
ethereum-types = "0.14.0"
